identifiability/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> model
Rule 1     model -> properties
Rule 2     empty -> <empty>
Rule 3     properties -> properties prop SC
Rule 4     properties -> empty
Rule 5     prop -> NOT prop
Rule 6     prop -> LP prop RP
Rule 7     prop -> prop BAND prop
Rule 8     prop -> prop BOR prop
Rule 9     prop -> prop IMPLY prop
Rule 10    prop -> NEXT LB NR RB prop
Rule 11    prop -> GLOBAL LB NR CM NR RB prop
Rule 12    prop -> GLOBAL LP NR CM NR RP prop
Rule 13    prop -> GLOBAL LB NR CM NR RP prop
Rule 14    prop -> GLOBAL LP NR CM NR RB prop
Rule 15    prop -> GLOBAL prop
Rule 16    prop -> FUTURE LB NR CM NR RB prop
Rule 17    prop -> FUTURE LP NR CM NR RP prop
Rule 18    prop -> FUTURE LB NR CM NR RP prop
Rule 19    prop -> FUTURE LP NR CM NR RB prop
Rule 20    prop -> FUTURE prop
Rule 21    prop -> prop UNTIL LB NR CM NR RB prop
Rule 22    prop -> prop UNTIL LP NR CM NR RP prop
Rule 23    prop -> prop UNTIL LB NR CM NR RP prop
Rule 24    prop -> prop UNTIL LP NR CM NR RB prop
Rule 25    prop -> prop UNTIL prop
Rule 26    prop -> prop RELEASE LB NR CM NR RB prop
Rule 27    prop -> prop RELEASE LP NR CM NR RP prop
Rule 28    prop -> prop RELEASE LB NR CM NR RP prop
Rule 29    prop -> prop RELEASE LP NR CM NR RB prop
Rule 30    prop -> prop RELEASE prop
Rule 31    prop -> condition
Rule 32    condition -> AT NUM
Rule 33    condition -> expr op expr
Rule 34    condition -> LP condition RP
Rule 35    condition -> T
Rule 36    condition -> F
Rule 37    op -> EQ
Rule 38    op -> LE
Rule 39    op -> GE
Rule 40    op -> LT
Rule 41    op -> GT
Rule 42    op -> NEQ
Rule 43    expr -> expr ADD expr
Rule 44    expr -> expr SUB expr
Rule 45    expr -> expr MULT expr
Rule 46    expr -> expr DIV expr
Rule 47    expr -> expr POW expr
Rule 48    expr -> LP expr RP
Rule 49    expr -> SUB expr
Rule 50    expr -> NR
Rule 51    expr -> VAR
Rule 52    NR -> NUM
Rule 53    NR -> RAT
Rule 54    expr -> trig_func
Rule 55    expr -> exp_func
Rule 56    trig_func -> trig LP expr RP
Rule 57    exp_func -> EXP LP expr RP
Rule 58    exp_func -> LOG LP expr RP
Rule 59    exp_func -> SQRT LP expr RP
Rule 60    trig -> SIN
Rule 61    trig -> COS
Rule 62    trig -> TAN

Terminals, with rules where they appear

ADD                  : 43
AT                   : 32
BAND                 : 7
BOR                  : 8
CM                   : 11 12 13 14 16 17 18 19 21 22 23 24 26 27 28 29
COS                  : 61
DIV                  : 46
EQ                   : 37
EXP                  : 57
F                    : 36
FUTURE               : 16 17 18 19 20
GE                   : 39
GLOBAL               : 11 12 13 14 15
GT                   : 41
IMPLY                : 9
LB                   : 10 11 13 16 18 21 23 26 28
LE                   : 38
LOG                  : 58
LP                   : 6 12 14 17 19 22 24 27 29 34 48 56 57 58 59
LT                   : 40
MULT                 : 45
NEQ                  : 42
NEXT                 : 10
NOT                  : 5
NUM                  : 32 52
POW                  : 47
RAT                  : 53
RB                   : 10 11 14 16 19 21 24 26 29
RELEASE              : 26 27 28 29 30
RP                   : 6 12 13 17 18 22 23 27 28 34 48 56 57 58 59
SC                   : 3
SIN                  : 60
SQRT                 : 59
SUB                  : 44 49
T                    : 35
TAN                  : 62
UNTIL                : 21 22 23 24 25
VAR                  : 51
error                : 

Nonterminals, with rules where they appear

NR                   : 10 11 11 12 12 13 13 14 14 16 16 17 17 18 18 19 19 21 21 22 22 23 23 24 24 26 26 27 27 28 28 29 29 50
condition            : 31 34
empty                : 4
exp_func             : 55
expr                 : 33 33 43 43 44 44 45 45 46 46 47 47 48 49 56 57 58 59
model                : 0
op                   : 33
prop                 : 3 5 6 7 7 8 8 9 9 10 11 12 13 14 15 16 17 18 19 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30
properties           : 1 3
trig                 : 56
trig_func            : 54

Parsing method: LALR

state 0

    (0) S' -> . model
    (1) model -> . properties
    (3) properties -> . properties prop SC
    (4) properties -> . empty
    (2) empty -> .

    NOT             reduce using rule 2 (empty -> .)
    LP              reduce using rule 2 (empty -> .)
    NEXT            reduce using rule 2 (empty -> .)
    GLOBAL          reduce using rule 2 (empty -> .)
    FUTURE          reduce using rule 2 (empty -> .)
    AT              reduce using rule 2 (empty -> .)
    T               reduce using rule 2 (empty -> .)
    F               reduce using rule 2 (empty -> .)
    SUB             reduce using rule 2 (empty -> .)
    VAR             reduce using rule 2 (empty -> .)
    NUM             reduce using rule 2 (empty -> .)
    RAT             reduce using rule 2 (empty -> .)
    EXP             reduce using rule 2 (empty -> .)
    LOG             reduce using rule 2 (empty -> .)
    SQRT            reduce using rule 2 (empty -> .)
    SIN             reduce using rule 2 (empty -> .)
    COS             reduce using rule 2 (empty -> .)
    TAN             reduce using rule 2 (empty -> .)
    $end            reduce using rule 2 (empty -> .)

    model                          shift and go to state 1
    properties                     shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> model .



state 2

    (1) model -> properties .
    (3) properties -> properties . prop SC
    (5) prop -> . NOT prop
    (6) prop -> . LP prop RP
    (7) prop -> . prop BAND prop
    (8) prop -> . prop BOR prop
    (9) prop -> . prop IMPLY prop
    (10) prop -> . NEXT LB NR RB prop
    (11) prop -> . GLOBAL LB NR CM NR RB prop
    (12) prop -> . GLOBAL LP NR CM NR RP prop
    (13) prop -> . GLOBAL LB NR CM NR RP prop
    (14) prop -> . GLOBAL LP NR CM NR RB prop
    (15) prop -> . GLOBAL prop
    (16) prop -> . FUTURE LB NR CM NR RB prop
    (17) prop -> . FUTURE LP NR CM NR RP prop
    (18) prop -> . FUTURE LB NR CM NR RP prop
    (19) prop -> . FUTURE LP NR CM NR RB prop
    (20) prop -> . FUTURE prop
    (21) prop -> . prop UNTIL LB NR CM NR RB prop
    (22) prop -> . prop UNTIL LP NR CM NR RP prop
    (23) prop -> . prop UNTIL LB NR CM NR RP prop
    (24) prop -> . prop UNTIL LP NR CM NR RB prop
    (25) prop -> . prop UNTIL prop
    (26) prop -> . prop RELEASE LB NR CM NR RB prop
    (27) prop -> . prop RELEASE LP NR CM NR RP prop
    (28) prop -> . prop RELEASE LB NR CM NR RP prop
    (29) prop -> . prop RELEASE LP NR CM NR RB prop
    (30) prop -> . prop RELEASE prop
    (31) prop -> . condition
    (32) condition -> . AT NUM
    (33) condition -> . expr op expr
    (34) condition -> . LP condition RP
    (35) condition -> . T
    (36) condition -> . F
    (43) expr -> . expr ADD expr
    (44) expr -> . expr SUB expr
    (45) expr -> . expr MULT expr
    (46) expr -> . expr DIV expr
    (47) expr -> . expr POW expr
    (48) expr -> . LP expr RP
    (49) expr -> . SUB expr
    (50) expr -> . NR
    (51) expr -> . VAR
    (54) expr -> . trig_func
    (55) expr -> . exp_func
    (52) NR -> . NUM
    (53) NR -> . RAT
    (56) trig_func -> . trig LP expr RP
    (57) exp_func -> . EXP LP expr RP
    (58) exp_func -> . LOG LP expr RP
    (59) exp_func -> . SQRT LP expr RP
    (60) trig -> . SIN
    (61) trig -> . COS
    (62) trig -> . TAN

    $end            reduce using rule 1 (model -> properties .)
    NOT             shift and go to state 5
    LP              shift and go to state 6
    NEXT            shift and go to state 7
    GLOBAL          shift and go to state 9
    FUTURE          shift and go to state 10
    AT              shift and go to state 12
    T               shift and go to state 15
    F               shift and go to state 16
    SUB             shift and go to state 17
    VAR             shift and go to state 18
    NUM             shift and go to state 13
    RAT             shift and go to state 21
    EXP             shift and go to state 23
    LOG             shift and go to state 24
    SQRT            shift and go to state 25
    SIN             shift and go to state 26
    COS             shift and go to state 27
    TAN             shift and go to state 28

    prop                           shift and go to state 4
    NR                             shift and go to state 8
    condition                      shift and go to state 11
    expr                           shift and go to state 14
    trig_func                      shift and go to state 19
    exp_func                       shift and go to state 20
    trig                           shift and go to state 22

state 3

    (4) properties -> empty .

    NOT             reduce using rule 4 (properties -> empty .)
    LP              reduce using rule 4 (properties -> empty .)
    NEXT            reduce using rule 4 (properties -> empty .)
    GLOBAL          reduce using rule 4 (properties -> empty .)
    FUTURE          reduce using rule 4 (properties -> empty .)
    AT              reduce using rule 4 (properties -> empty .)
    T               reduce using rule 4 (properties -> empty .)
    F               reduce using rule 4 (properties -> empty .)
    SUB             reduce using rule 4 (properties -> empty .)
    VAR             reduce using rule 4 (properties -> empty .)
    NUM             reduce using rule 4 (properties -> empty .)
    RAT             reduce using rule 4 (properties -> empty .)
    EXP             reduce using rule 4 (properties -> empty .)
    LOG             reduce using rule 4 (properties -> empty .)
    SQRT            reduce using rule 4 (properties -> empty .)
    SIN             reduce using rule 4 (properties -> empty .)
    COS             reduce using rule 4 (properties -> empty .)
    TAN             reduce using rule 4 (properties -> empty .)
    $end            reduce using rule 4 (properties -> empty .)


state 4

    (3) properties -> properties prop . SC
    (7) prop -> prop . BAND prop
    (8) prop -> prop . BOR prop
    (9) prop -> prop . IMPLY prop
    (21) prop -> prop . UNTIL LB NR CM NR RB prop
    (22) prop -> prop . UNTIL LP NR CM NR RP prop
    (23) prop -> prop . UNTIL LB NR CM NR RP prop
    (24) prop -> prop . UNTIL LP NR CM NR RB prop
    (25) prop -> prop . UNTIL prop
    (26) prop -> prop . RELEASE LB NR CM NR RB prop
    (27) prop -> prop . RELEASE LP NR CM NR RP prop
    (28) prop -> prop . RELEASE LB NR CM NR RP prop
    (29) prop -> prop . RELEASE LP NR CM NR RB prop
    (30) prop -> prop . RELEASE prop

    SC              shift and go to state 29
    BAND            shift and go to state 30
    BOR             shift and go to state 31
    IMPLY           shift and go to state 32
    UNTIL           shift and go to state 33
    RELEASE         shift and go to state 34


state 5

    (5) prop -> NOT . prop
    (5) prop -> . NOT prop
    (6) prop -> . LP prop RP
    (7) prop -> . prop BAND prop
    (8) prop -> . prop BOR prop
    (9) prop -> . prop IMPLY prop
    (10) prop -> . NEXT LB NR RB prop
    (11) prop -> . GLOBAL LB NR CM NR RB prop
    (12) prop -> . GLOBAL LP NR CM NR RP prop
    (13) prop -> . GLOBAL LB NR CM NR RP prop
    (14) prop -> . GLOBAL LP NR CM NR RB prop
    (15) prop -> . GLOBAL prop
    (16) prop -> . FUTURE LB NR CM NR RB prop
    (17) prop -> . FUTURE LP NR CM NR RP prop
    (18) prop -> . FUTURE LB NR CM NR RP prop
    (19) prop -> . FUTURE LP NR CM NR RB prop
    (20) prop -> . FUTURE prop
    (21) prop -> . prop UNTIL LB NR CM NR RB prop
    (22) prop -> . prop UNTIL LP NR CM NR RP prop
    (23) prop -> . prop UNTIL LB NR CM NR RP prop
    (24) prop -> . prop UNTIL LP NR CM NR RB prop
    (25) prop -> . prop UNTIL prop
    (26) prop -> . prop RELEASE LB NR CM NR RB prop
    (27) prop -> . prop RELEASE LP NR CM NR RP prop
    (28) prop -> . prop RELEASE LB NR CM NR RP prop
    (29) prop -> . prop RELEASE LP NR CM NR RB prop
    (30) prop -> . prop RELEASE prop
    (31) prop -> . condition
    (32) condition -> . AT NUM
    (33) condition -> . expr op expr
    (34) condition -> . LP condition RP
    (35) condition -> . T
    (36) condition -> . F
    (43) expr -> . expr ADD expr
    (44) expr -> . expr SUB expr
    (45) expr -> . expr MULT expr
    (46) expr -> . expr DIV expr
    (47) expr -> . expr POW expr
    (48) expr -> . LP expr RP
    (49) expr -> . SUB expr
    (50) expr -> . NR
    (51) expr -> . VAR
    (54) expr -> . trig_func
    (55) expr -> . exp_func
    (52) NR -> . NUM
    (53) NR -> . RAT
    (56) trig_func -> . trig LP expr RP
    (57) exp_func -> . EXP LP expr RP
    (58) exp_func -> . LOG LP expr RP
    (59) exp_func -> . SQRT LP expr RP
    (60) trig -> . SIN
    (61) trig -> . COS
    (62) trig -> . TAN

    NOT             shift and go to state 5
    LP              shift and go to state 6
    NEXT            shift and go to state 7
    GLOBAL          shift and go to state 9
    FUTURE          shift and go to state 10
    AT              shift and go to state 12
    T               shift and go to state 15
    F               shift and go to state 16
    SUB             shift and go to state 17
    VAR             shift and go to state 18
    NUM             shift and go to state 13
    RAT             shift and go to state 21
    EXP             shift and go to state 23
    LOG             shift and go to state 24
    SQRT            shift and go to state 25
    SIN             shift and go to state 26
    COS             shift and go to state 27
    TAN             shift and go to state 28

    prop                           shift and go to state 35
    NR                             shift and go to state 8
    condition                      shift and go to state 11
    expr                           shift and go to state 14
    trig_func                      shift and go to state 19
    exp_func                       shift and go to state 20
    trig                           shift and go to state 22

state 6

    (6) prop -> LP . prop RP
    (34) condition -> LP . condition RP
    (48) expr -> LP . expr RP
    (5) prop -> . NOT prop
    (6) prop -> . LP prop RP
    (7) prop -> . prop BAND prop
    (8) prop -> . prop BOR prop
    (9) prop -> . prop IMPLY prop
    (10) prop -> . NEXT LB NR RB prop
    (11) prop -> . GLOBAL LB NR CM NR RB prop
    (12) prop -> . GLOBAL LP NR CM NR RP prop
    (13) prop -> . GLOBAL LB NR CM NR RP prop
    (14) prop -> . GLOBAL LP NR CM NR RB prop
    (15) prop -> . GLOBAL prop
    (16) prop -> . FUTURE LB NR CM NR RB prop
    (17) prop -> . FUTURE LP NR CM NR RP prop
    (18) prop -> . FUTURE LB NR CM NR RP prop
    (19) prop -> . FUTURE LP NR CM NR RB prop
    (20) prop -> . FUTURE prop
    (21) prop -> . prop UNTIL LB NR CM NR RB prop
    (22) prop -> . prop UNTIL LP NR CM NR RP prop
    (23) prop -> . prop UNTIL LB NR CM NR RP prop
    (24) prop -> . prop UNTIL LP NR CM NR RB prop
    (25) prop -> . prop UNTIL prop
    (26) prop -> . prop RELEASE LB NR CM NR RB prop
    (27) prop -> . prop RELEASE LP NR CM NR RP prop
    (28) prop -> . prop RELEASE LB NR CM NR RP prop
    (29) prop -> . prop RELEASE LP NR CM NR RB prop
    (30) prop -> . prop RELEASE prop
    (31) prop -> . condition
    (32) condition -> . AT NUM
    (33) condition -> . expr op expr
    (34) condition -> . LP condition RP
    (35) condition -> . T
    (36) condition -> . F
    (43) expr -> . expr ADD expr
    (44) expr -> . expr SUB expr
    (45) expr -> . expr MULT expr
    (46) expr -> . expr DIV expr
    (47) expr -> . expr POW expr
    (48) expr -> . LP expr RP
    (49) expr -> . SUB expr
    (50) expr -> . NR
    (51) expr -> . VAR
    (54) expr -> . trig_func
    (55) expr -> . exp_func
    (52) NR -> . NUM
    (53) NR -> . RAT
    (56) trig_func -> . trig LP expr RP
    (57) exp_func -> . EXP LP expr RP
    (58) exp_func -> . LOG LP expr RP
    (59) exp_func -> . SQRT LP expr RP
    (60) trig -> . SIN
    (61) trig -> . COS
    (62) trig -> . TAN

    NOT             shift and go to state 5
    LP              shift and go to state 6
    NEXT            shift and go to state 7
    GLOBAL          shift and go to state 9
    FUTURE          shift and go to state 10
    AT              shift and go to state 12
    T               shift and go to state 15
    F               shift and go to state 16
    SUB             shift and go to state 17
    VAR             shift and go to state 18
    NUM             shift and go to state 13
    RAT             shift and go to state 21
    EXP             shift and go to state 23
    LOG             shift and go to state 24
    SQRT            shift and go to state 25
    SIN             shift and go to state 26
    COS             shift and go to state 27
    TAN             shift and go to state 28

    prop                           shift and go to state 36
    condition                      shift and go to state 37
    expr                           shift and go to state 38
    NR                             shift and go to state 8
    trig_func                      shift and go to state 19
    exp_func                       shift and go to state 20
    trig                           shift and go to state 22

state 7

    (10) prop -> NEXT . LB NR RB prop

    LB              shift and go to state 39


state 8

    (50) expr -> NR .

    ADD             reduce using rule 50 (expr -> NR .)
    SUB             reduce using rule 50 (expr -> NR .)
    MULT            reduce using rule 50 (expr -> NR .)
    DIV             reduce using rule 50 (expr -> NR .)
    POW             reduce using rule 50 (expr -> NR .)
    EQ              reduce using rule 50 (expr -> NR .)
    LE              reduce using rule 50 (expr -> NR .)
    GE              reduce using rule 50 (expr -> NR .)
    LT              reduce using rule 50 (expr -> NR .)
    GT              reduce using rule 50 (expr -> NR .)
    NEQ             reduce using rule 50 (expr -> NR .)
    RP              reduce using rule 50 (expr -> NR .)
    SC              reduce using rule 50 (expr -> NR .)
    BAND            reduce using rule 50 (expr -> NR .)
    BOR             reduce using rule 50 (expr -> NR .)
    IMPLY           reduce using rule 50 (expr -> NR .)
    UNTIL           reduce using rule 50 (expr -> NR .)
    RELEASE         reduce using rule 50 (expr -> NR .)


state 9

    (11) prop -> GLOBAL . LB NR CM NR RB prop
    (12) prop -> GLOBAL . LP NR CM NR RP prop
    (13) prop -> GLOBAL . LB NR CM NR RP prop
    (14) prop -> GLOBAL . LP NR CM NR RB prop
    (15) prop -> GLOBAL . prop
    (5) prop -> . NOT prop
    (6) prop -> . LP prop RP
    (7) prop -> . prop BAND prop
    (8) prop -> . prop BOR prop
    (9) prop -> . prop IMPLY prop
    (10) prop -> . NEXT LB NR RB prop
    (11) prop -> . GLOBAL LB NR CM NR RB prop
    (12) prop -> . GLOBAL LP NR CM NR RP prop
    (13) prop -> . GLOBAL LB NR CM NR RP prop
    (14) prop -> . GLOBAL LP NR CM NR RB prop
    (15) prop -> . GLOBAL prop
    (16) prop -> . FUTURE LB NR CM NR RB prop
    (17) prop -> . FUTURE LP NR CM NR RP prop
    (18) prop -> . FUTURE LB NR CM NR RP prop
    (19) prop -> . FUTURE LP NR CM NR RB prop
    (20) prop -> . FUTURE prop
    (21) prop -> . prop UNTIL LB NR CM NR RB prop
    (22) prop -> . prop UNTIL LP NR CM NR RP prop
    (23) prop -> . prop UNTIL LB NR CM NR RP prop
    (24) prop -> . prop UNTIL LP NR CM NR RB prop
    (25) prop -> . prop UNTIL prop
    (26) prop -> . prop RELEASE LB NR CM NR RB prop
    (27) prop -> . prop RELEASE LP NR CM NR RP prop
    (28) prop -> . prop RELEASE LB NR CM NR RP prop
    (29) prop -> . prop RELEASE LP NR CM NR RB prop
    (30) prop -> . prop RELEASE prop
    (31) prop -> . condition
    (32) condition -> . AT NUM
    (33) condition -> . expr op expr
    (34) condition -> . LP condition RP
    (35) condition -> . T
    (36) condition -> . F
    (43) expr -> . expr ADD expr
    (44) expr -> . expr SUB expr
    (45) expr -> . expr MULT expr
    (46) expr -> . expr DIV expr
    (47) expr -> . expr POW expr
    (48) expr -> . LP expr RP
    (49) expr -> . SUB expr
    (50) expr -> . NR
    (51) expr -> . VAR
    (54) expr -> . trig_func
    (55) expr -> . exp_func
    (52) NR -> . NUM
    (53) NR -> . RAT
    (56) trig_func -> . trig LP expr RP
    (57) exp_func -> . EXP LP expr RP
    (58) exp_func -> . LOG LP expr RP
    (59) exp_func -> . SQRT LP expr RP
    (60) trig -> . SIN
    (61) trig -> . COS
    (62) trig -> . TAN

    LB              shift and go to state 40
    LP              shift and go to state 42
    NOT             shift and go to state 5
    NEXT            shift and go to state 7
    GLOBAL          shift and go to state 9
    FUTURE          shift and go to state 10
    AT              shift and go to state 12
    T               shift and go to state 15
    F               shift and go to state 16
    SUB             shift and go to state 17
    VAR             shift and go to state 18
    NUM             shift and go to state 13
    RAT             shift and go to state 21
    EXP             shift and go to state 23
    LOG             shift and go to state 24
    SQRT            shift and go to state 25
    SIN             shift and go to state 26
    COS             shift and go to state 27
    TAN             shift and go to state 28

    NR                             shift and go to state 8
    prop                           shift and go to state 41
    condition                      shift and go to state 11
    expr                           shift and go to state 14
    trig_func                      shift and go to state 19
    exp_func                       shift and go to state 20
    trig                           shift and go to state 22

state 10
